examples/md_run/replica1/isokann_rs_outputs/my_job.18315566.err
  0%|          | 0/50 [00:00<?, ?it/s]  0%|          | 0/50 [00:02<?, ?it/s]
Traceback (most recent call last):
  File "/scratch/htc/fsafarov/2cm2_simulation/MoKiTo/examples/md_run/replica1/isokann_rs_runs/isokann_random_search_3.py", line 80, in <module>
    best_hyperparams, best_val_loss  = random_search(D0,
                                       ^^^^^^^^^^^^^^^^^
  File "/scratch/htc/fsafarov/2cm2_simulation/MoKiTo/src/isokann/modules3_2.py", line 201, in random_search
    train_losses, val_losses, val_loss, convergence = power_method(X, Y,
                                                      ^^^^^^^^^^^^^^^^^^
  File "/scratch/htc/fsafarov/2cm2_simulation/MoKiTo/src/isokann/modules3_2.py", line 296, in power_method
    train_loss, val_loss, best_loss = trainNN(net      = f_NN,
                                      ^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: trainNN() missing 1 required positional argument: 'momentum'
